fix flag spacing and added label to phone input

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,6 @@ body {
 }
 
 .react-tel-input .flag-dropdown {
-  top: 19px;
+  top: 35px;
   bottom: auto;
 }
